--- a/css/main.css
+++ b/css/main.css
@@ -128,15 +128,14 @@ article p {
 
 #ethan {
     background-image: url('../images/ethan-profile.jpg');
-    background-size: 39vh;
+    background-size: cover;
     background-repeat: no-repeat;
 }
 
 #ethan:hover {
     background-image: url('../images/ethan-hover.jpg');
-    background-size: 40vh;
-    background-position: 0px -127px;
-    transition: background-image 0.3s;
+    background-size: cover;
+    transition: background-image 0.3s ease-in-out;
     cursor: pointer;
 }
 
